begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
begin_comment
comment|/**  * Licensed to the Apache Software Foundation (ASF) under one or more  * contributor license agreements.  See the NOTICE file distributed with this  * work for additional information regarding copyright ownership.  The ASF  * licenses this file to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance with the License.  * You may obtain a copy of the License at  *<p>  * http://www.apache.org/licenses/LICENSE-2.0  *<p>  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT  * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the  * License for the specific language governing permissions and limitations under  * the License.  */
end_comment

begin_package
DECL|package|org.apache.hadoop.ozone.scm.container
package|package
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|scm
operator|.
name|container
package|;
end_package

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|conf
operator|.
name|Configuration
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|fs
operator|.
name|FileUtil
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hdfs
operator|.
name|protocol
operator|.
name|DatanodeID
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|OzoneConfigKeys
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|container
operator|.
name|common
operator|.
name|SCMTestUtils
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|proto
operator|.
name|OzoneProtos
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|proto
operator|.
name|StorageContainerDatanodeProtocolProtos
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|proto
operator|.
name|StorageContainerDatanodeProtocolProtos
operator|.
name|ContainerReportsRequestProto
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|scm
operator|.
name|container
operator|.
name|ContainerStates
operator|.
name|ContainerID
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|scm
operator|.
name|ScmConfigKeys
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|scm
operator|.
name|XceiverClientManager
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|scm
operator|.
name|container
operator|.
name|common
operator|.
name|helpers
operator|.
name|ContainerInfo
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|scm
operator|.
name|container
operator|.
name|common
operator|.
name|helpers
operator|.
name|Pipeline
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|test
operator|.
name|GenericTestUtils
import|;
end_import

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|AfterClass
import|;
end_import

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|Assert
import|;
end_import

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|Before
import|;
end_import

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|BeforeClass
import|;
end_import

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|Rule
import|;
end_import

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|Test
import|;
end_import

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|rules
operator|.
name|ExpectedException
import|;
end_import

begin_import
import|import
name|java
operator|.
name|io
operator|.
name|File
import|;
end_import

begin_import
import|import
name|java
operator|.
name|io
operator|.
name|IOException
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|ArrayList
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|List
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|NavigableSet
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|Set
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|TreeSet
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|UUID
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|concurrent
operator|.
name|TimeUnit
import|;
end_import

begin_comment
comment|/**  * Tests for Container Mapping.  */
end_comment

begin_class
DECL|class|TestContainerMapping
specifier|public
class|class
name|TestContainerMapping
block|{
DECL|field|mapping
specifier|private
specifier|static
name|ContainerMapping
name|mapping
decl_stmt|;
DECL|field|nodeManager
specifier|private
specifier|static
name|MockNodeManager
name|nodeManager
decl_stmt|;
DECL|field|testDir
specifier|private
specifier|static
name|File
name|testDir
decl_stmt|;
DECL|field|xceiverClientManager
specifier|private
specifier|static
name|XceiverClientManager
name|xceiverClientManager
decl_stmt|;
DECL|field|containerOwner
specifier|private
specifier|static
name|String
name|containerOwner
init|=
literal|"OZONE"
decl_stmt|;
DECL|field|TIMEOUT
specifier|private
specifier|static
specifier|final
name|long
name|TIMEOUT
init|=
literal|10000
decl_stmt|;
annotation|@
name|Rule
DECL|field|thrown
specifier|public
name|ExpectedException
name|thrown
init|=
name|ExpectedException
operator|.
name|none
argument_list|()
decl_stmt|;
annotation|@
name|BeforeClass
DECL|method|setUp ()
specifier|public
specifier|static
name|void
name|setUp
parameter_list|()
throws|throws
name|Exception
block|{
name|Configuration
name|conf
init|=
name|SCMTestUtils
operator|.
name|getConf
argument_list|()
decl_stmt|;
name|testDir
operator|=
name|GenericTestUtils
operator|.
name|getTestDir
argument_list|(
name|TestContainerMapping
operator|.
name|class
operator|.
name|getSimpleName
argument_list|()
argument_list|)
expr_stmt|;
name|conf
operator|.
name|set
argument_list|(
name|OzoneConfigKeys
operator|.
name|OZONE_METADATA_DIRS
argument_list|,
name|testDir
operator|.
name|getAbsolutePath
argument_list|()
argument_list|)
expr_stmt|;
name|conf
operator|.
name|setTimeDuration
argument_list|(
name|ScmConfigKeys
operator|.
name|OZONE_SCM_CONTAINER_CREATION_LEASE_TIMEOUT
argument_list|,
name|TIMEOUT
argument_list|,
name|TimeUnit
operator|.
name|MILLISECONDS
argument_list|)
expr_stmt|;
name|boolean
name|folderExisted
init|=
name|testDir
operator|.
name|exists
argument_list|()
operator|||
name|testDir
operator|.
name|mkdirs
argument_list|()
decl_stmt|;
if|if
condition|(
operator|!
name|folderExisted
condition|)
block|{
throw|throw
operator|new
name|IOException
argument_list|(
literal|"Unable to create test directory path"
argument_list|)
throw|;
block|}
name|nodeManager
operator|=
operator|new
name|MockNodeManager
argument_list|(
literal|true
argument_list|,
literal|10
argument_list|)
expr_stmt|;
name|mapping
operator|=
operator|new
name|ContainerMapping
argument_list|(
name|conf
argument_list|,
name|nodeManager
argument_list|,
literal|128
argument_list|)
expr_stmt|;
name|xceiverClientManager
operator|=
operator|new
name|XceiverClientManager
argument_list|(
name|conf
argument_list|)
expr_stmt|;
block|}
annotation|@
name|AfterClass
DECL|method|cleanup ()
specifier|public
specifier|static
name|void
name|cleanup
parameter_list|()
throws|throws
name|IOException
block|{
if|if
condition|(
name|mapping
operator|!=
literal|null
condition|)
block|{
name|mapping
operator|.
name|close
argument_list|()
expr_stmt|;
block|}
name|FileUtil
operator|.
name|fullyDelete
argument_list|(
name|testDir
argument_list|)
expr_stmt|;
block|}
annotation|@
name|Before
DECL|method|clearChillMode ()
specifier|public
name|void
name|clearChillMode
parameter_list|()
block|{
name|nodeManager
operator|.
name|setChillmode
argument_list|(
literal|false
argument_list|)
expr_stmt|;
block|}
annotation|@
name|Test
DECL|method|testallocateContainer ()
specifier|public
name|void
name|testallocateContainer
parameter_list|()
throws|throws
name|Exception
block|{
name|ContainerInfo
name|containerInfo
init|=
name|mapping
operator|.
name|allocateContainer
argument_list|(
name|xceiverClientManager
operator|.
name|getType
argument_list|()
argument_list|,
name|xceiverClientManager
operator|.
name|getFactor
argument_list|()
argument_list|,
name|UUID
operator|.
name|randomUUID
argument_list|()
operator|.
name|toString
argument_list|()
argument_list|,
name|containerOwner
argument_list|)
decl_stmt|;
name|Assert
operator|.
name|assertNotNull
argument_list|(
name|containerInfo
argument_list|)
expr_stmt|;
block|}
annotation|@
name|Test
DECL|method|testallocateContainerDistributesAllocation ()
specifier|public
name|void
name|testallocateContainerDistributesAllocation
parameter_list|()
throws|throws
name|Exception
block|{
comment|/* This is a lame test, we should really be testing something like     z-score or make sure that we don't have 3sigma kind of events. Too lazy     to write all that code. This test very lamely tests if we have more than     5 separate nodes  from the list of 10 datanodes that got allocated a     container.      */
name|Set
argument_list|<
name|String
argument_list|>
name|pipelineList
init|=
operator|new
name|TreeSet
argument_list|<>
argument_list|()
decl_stmt|;
for|for
control|(
name|int
name|x
init|=
literal|0
init|;
name|x
operator|<
literal|30
condition|;
name|x
operator|++
control|)
block|{
name|ContainerInfo
name|containerInfo
init|=
name|mapping
operator|.
name|allocateContainer
argument_list|(
name|xceiverClientManager
operator|.
name|getType
argument_list|()
argument_list|,
name|xceiverClientManager
operator|.
name|getFactor
argument_list|()
argument_list|,
name|UUID
operator|.
name|randomUUID
argument_list|()
operator|.
name|toString
argument_list|()
argument_list|,
name|containerOwner
argument_list|)
decl_stmt|;
name|Assert
operator|.
name|assertNotNull
argument_list|(
name|containerInfo
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertNotNull
argument_list|(
name|containerInfo
operator|.
name|getPipeline
argument_list|()
argument_list|)
expr_stmt|;
name|pipelineList
operator|.
name|add
argument_list|(
name|containerInfo
operator|.
name|getPipeline
argument_list|()
operator|.
name|getLeader
argument_list|()
operator|.
name|getDatanodeUuid
argument_list|()
argument_list|)
expr_stmt|;
block|}
name|Assert
operator|.
name|assertTrue
argument_list|(
name|pipelineList
operator|.
name|size
argument_list|()
operator|>
literal|5
argument_list|)
expr_stmt|;
block|}
annotation|@
name|Test
DECL|method|testGetContainer ()
specifier|public
name|void
name|testGetContainer
parameter_list|()
throws|throws
name|IOException
block|{
name|String
name|containerName
init|=
name|UUID
operator|.
name|randomUUID
argument_list|()
operator|.
name|toString
argument_list|()
decl_stmt|;
name|Pipeline
name|pipeline
init|=
name|mapping
operator|.
name|allocateContainer
argument_list|(
name|xceiverClientManager
operator|.
name|getType
argument_list|()
argument_list|,
name|xceiverClientManager
operator|.
name|getFactor
argument_list|()
argument_list|,
name|containerName
argument_list|,
name|containerOwner
argument_list|)
operator|.
name|getPipeline
argument_list|()
decl_stmt|;
name|Assert
operator|.
name|assertNotNull
argument_list|(
name|pipeline
argument_list|)
expr_stmt|;
name|Pipeline
name|newPipeline
init|=
name|mapping
operator|.
name|getContainer
argument_list|(
name|containerName
argument_list|)
operator|.
name|getPipeline
argument_list|()
decl_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
name|pipeline
operator|.
name|getLeader
argument_list|()
operator|.
name|getDatanodeUuid
argument_list|()
argument_list|,
name|newPipeline
operator|.
name|getLeader
argument_list|()
operator|.
name|getDatanodeUuid
argument_list|()
argument_list|)
expr_stmt|;
block|}
annotation|@
name|Test
DECL|method|testDuplicateAllocateContainerFails ()
specifier|public
name|void
name|testDuplicateAllocateContainerFails
parameter_list|()
throws|throws
name|IOException
block|{
name|String
name|containerName
init|=
name|UUID
operator|.
name|randomUUID
argument_list|()
operator|.
name|toString
argument_list|()
decl_stmt|;
name|Pipeline
name|pipeline
init|=
name|mapping
operator|.
name|allocateContainer
argument_list|(
name|xceiverClientManager
operator|.
name|getType
argument_list|()
argument_list|,
name|xceiverClientManager
operator|.
name|getFactor
argument_list|()
argument_list|,
name|containerName
argument_list|,
name|containerOwner
argument_list|)
operator|.
name|getPipeline
argument_list|()
decl_stmt|;
name|Assert
operator|.
name|assertNotNull
argument_list|(
name|pipeline
argument_list|)
expr_stmt|;
name|thrown
operator|.
name|expectMessage
argument_list|(
literal|"Specified container already exists."
argument_list|)
expr_stmt|;
name|mapping
operator|.
name|allocateContainer
argument_list|(
name|xceiverClientManager
operator|.
name|getType
argument_list|()
argument_list|,
name|xceiverClientManager
operator|.
name|getFactor
argument_list|()
argument_list|,
name|containerName
argument_list|,
name|containerOwner
argument_list|)
expr_stmt|;
block|}
annotation|@
name|Test
DECL|method|testgetNoneExistentContainer ()
specifier|public
name|void
name|testgetNoneExistentContainer
parameter_list|()
throws|throws
name|IOException
block|{
name|String
name|containerName
init|=
name|UUID
operator|.
name|randomUUID
argument_list|()
operator|.
name|toString
argument_list|()
decl_stmt|;
name|thrown
operator|.
name|expectMessage
argument_list|(
literal|"Specified key does not exist."
argument_list|)
expr_stmt|;
name|mapping
operator|.
name|getContainer
argument_list|(
name|containerName
argument_list|)
expr_stmt|;
block|}
annotation|@
name|Test
DECL|method|testChillModeAllocateContainerFails ()
specifier|public
name|void
name|testChillModeAllocateContainerFails
parameter_list|()
throws|throws
name|IOException
block|{
name|String
name|containerName
init|=
name|UUID
operator|.
name|randomUUID
argument_list|()
operator|.
name|toString
argument_list|()
decl_stmt|;
name|nodeManager
operator|.
name|setChillmode
argument_list|(
literal|true
argument_list|)
expr_stmt|;
name|thrown
operator|.
name|expectMessage
argument_list|(
literal|"Unable to create container while in chill mode"
argument_list|)
expr_stmt|;
name|mapping
operator|.
name|allocateContainer
argument_list|(
name|xceiverClientManager
operator|.
name|getType
argument_list|()
argument_list|,
name|xceiverClientManager
operator|.
name|getFactor
argument_list|()
argument_list|,
name|containerName
argument_list|,
name|containerOwner
argument_list|)
expr_stmt|;
block|}
annotation|@
name|Test
DECL|method|testContainerCreationLeaseTimeout ()
specifier|public
name|void
name|testContainerCreationLeaseTimeout
parameter_list|()
throws|throws
name|IOException
throws|,
name|InterruptedException
block|{
name|String
name|containerName
init|=
name|UUID
operator|.
name|randomUUID
argument_list|()
operator|.
name|toString
argument_list|()
decl_stmt|;
name|nodeManager
operator|.
name|setChillmode
argument_list|(
literal|false
argument_list|)
expr_stmt|;
name|ContainerInfo
name|containerInfo
init|=
name|mapping
operator|.
name|allocateContainer
argument_list|(
name|xceiverClientManager
operator|.
name|getType
argument_list|()
argument_list|,
name|xceiverClientManager
operator|.
name|getFactor
argument_list|()
argument_list|,
name|containerName
argument_list|,
name|containerOwner
argument_list|)
decl_stmt|;
name|mapping
operator|.
name|updateContainerState
argument_list|(
name|containerInfo
operator|.
name|getContainerName
argument_list|()
argument_list|,
name|OzoneProtos
operator|.
name|LifeCycleEvent
operator|.
name|CREATE
argument_list|)
expr_stmt|;
name|Thread
operator|.
name|sleep
argument_list|(
name|TIMEOUT
operator|+
literal|1000
argument_list|)
expr_stmt|;
name|NavigableSet
argument_list|<
name|ContainerID
argument_list|>
name|deleteContainers
init|=
name|mapping
operator|.
name|getStateManager
argument_list|()
operator|.
name|getMatchingContainerIDs
argument_list|(
literal|"OZONE"
argument_list|,
name|xceiverClientManager
operator|.
name|getType
argument_list|()
argument_list|,
name|xceiverClientManager
operator|.
name|getFactor
argument_list|()
argument_list|,
name|OzoneProtos
operator|.
name|LifeCycleState
operator|.
name|DELETING
argument_list|)
decl_stmt|;
name|Assert
operator|.
name|assertTrue
argument_list|(
name|deleteContainers
operator|.
name|contains
argument_list|(
name|containerInfo
operator|.
name|containerID
argument_list|()
argument_list|)
argument_list|)
expr_stmt|;
name|thrown
operator|.
name|expect
argument_list|(
name|IOException
operator|.
name|class
argument_list|)
expr_stmt|;
name|thrown
operator|.
name|expectMessage
argument_list|(
literal|"Lease Exception"
argument_list|)
expr_stmt|;
name|mapping
operator|.
name|updateContainerState
argument_list|(
name|containerInfo
operator|.
name|getContainerName
argument_list|()
argument_list|,
name|OzoneProtos
operator|.
name|LifeCycleEvent
operator|.
name|CREATED
argument_list|)
expr_stmt|;
block|}
annotation|@
name|Test
DECL|method|testFullContainerReport ()
specifier|public
name|void
name|testFullContainerReport
parameter_list|()
throws|throws
name|IOException
throws|,
name|InterruptedException
block|{
name|String
name|containerName
init|=
name|UUID
operator|.
name|randomUUID
argument_list|()
operator|.
name|toString
argument_list|()
decl_stmt|;
name|ContainerInfo
name|info
init|=
name|createContainer
argument_list|(
name|containerName
argument_list|)
decl_stmt|;
name|DatanodeID
name|datanodeID
init|=
name|SCMTestUtils
operator|.
name|getDatanodeID
argument_list|()
decl_stmt|;
name|ContainerReportsRequestProto
operator|.
name|reportType
name|reportType
init|=
name|ContainerReportsRequestProto
operator|.
name|reportType
operator|.
name|fullReport
decl_stmt|;
name|List
argument_list|<
name|StorageContainerDatanodeProtocolProtos
operator|.
name|ContainerInfo
argument_list|>
name|reports
init|=
operator|new
name|ArrayList
argument_list|<>
argument_list|()
decl_stmt|;
name|StorageContainerDatanodeProtocolProtos
operator|.
name|ContainerInfo
operator|.
name|Builder
name|ciBuilder
init|=
name|StorageContainerDatanodeProtocolProtos
operator|.
name|ContainerInfo
operator|.
name|newBuilder
argument_list|()
decl_stmt|;
name|ciBuilder
operator|.
name|setContainerName
argument_list|(
name|containerName
argument_list|)
comment|//setting some random hash
operator|.
name|setFinalhash
argument_list|(
literal|"e16cc9d6024365750ed8dbd194ea46d2"
argument_list|)
operator|.
name|setSize
argument_list|(
literal|5368709120L
argument_list|)
operator|.
name|setUsed
argument_list|(
literal|2000000000L
argument_list|)
operator|.
name|setKeyCount
argument_list|(
literal|100000000L
argument_list|)
operator|.
name|setReadCount
argument_list|(
literal|100000000L
argument_list|)
operator|.
name|setWriteCount
argument_list|(
literal|100000000L
argument_list|)
operator|.
name|setReadBytes
argument_list|(
literal|2000000000L
argument_list|)
operator|.
name|setWriteBytes
argument_list|(
literal|2000000000L
argument_list|)
operator|.
name|setContainerID
argument_list|(
name|info
operator|.
name|getContainerID
argument_list|()
argument_list|)
expr_stmt|;
name|reports
operator|.
name|add
argument_list|(
name|ciBuilder
operator|.
name|build
argument_list|()
argument_list|)
expr_stmt|;
name|mapping
operator|.
name|processContainerReports
argument_list|(
name|datanodeID
argument_list|,
name|reportType
argument_list|,
name|reports
argument_list|)
expr_stmt|;
name|ContainerInfo
name|updatedContainer
init|=
name|mapping
operator|.
name|getContainer
argument_list|(
name|containerName
argument_list|)
decl_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
literal|100000000L
argument_list|,
name|updatedContainer
operator|.
name|getNumberOfKeys
argument_list|()
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
literal|2000000000L
argument_list|,
name|updatedContainer
operator|.
name|getUsedBytes
argument_list|()
argument_list|)
expr_stmt|;
block|}
annotation|@
name|Test
DECL|method|testContainerCloseWithContainerReport ()
specifier|public
name|void
name|testContainerCloseWithContainerReport
parameter_list|()
throws|throws
name|IOException
block|{
name|String
name|containerName
init|=
name|UUID
operator|.
name|randomUUID
argument_list|()
operator|.
name|toString
argument_list|()
decl_stmt|;
name|ContainerInfo
name|info
init|=
name|createContainer
argument_list|(
name|containerName
argument_list|)
decl_stmt|;
name|DatanodeID
name|datanodeID
init|=
name|SCMTestUtils
operator|.
name|getDatanodeID
argument_list|()
decl_stmt|;
name|ContainerReportsRequestProto
operator|.
name|reportType
name|reportType
init|=
name|ContainerReportsRequestProto
operator|.
name|reportType
operator|.
name|fullReport
decl_stmt|;
name|List
argument_list|<
name|StorageContainerDatanodeProtocolProtos
operator|.
name|ContainerInfo
argument_list|>
name|reports
init|=
operator|new
name|ArrayList
argument_list|<>
argument_list|()
decl_stmt|;
name|StorageContainerDatanodeProtocolProtos
operator|.
name|ContainerInfo
operator|.
name|Builder
name|ciBuilder
init|=
name|StorageContainerDatanodeProtocolProtos
operator|.
name|ContainerInfo
operator|.
name|newBuilder
argument_list|()
decl_stmt|;
name|ciBuilder
operator|.
name|setContainerName
argument_list|(
name|containerName
argument_list|)
comment|//setting some random hash
operator|.
name|setFinalhash
argument_list|(
literal|"7c45eb4d7ed5e0d2e89aaab7759de02e"
argument_list|)
operator|.
name|setSize
argument_list|(
literal|5368709120L
argument_list|)
operator|.
name|setUsed
argument_list|(
literal|5368705120L
argument_list|)
operator|.
name|setKeyCount
argument_list|(
literal|500000000L
argument_list|)
operator|.
name|setReadCount
argument_list|(
literal|500000000L
argument_list|)
operator|.
name|setWriteCount
argument_list|(
literal|500000000L
argument_list|)
operator|.
name|setReadBytes
argument_list|(
literal|5368705120L
argument_list|)
operator|.
name|setWriteBytes
argument_list|(
literal|5368705120L
argument_list|)
operator|.
name|setContainerID
argument_list|(
name|info
operator|.
name|getContainerID
argument_list|()
argument_list|)
expr_stmt|;
name|reports
operator|.
name|add
argument_list|(
name|ciBuilder
operator|.
name|build
argument_list|()
argument_list|)
expr_stmt|;
name|mapping
operator|.
name|processContainerReports
argument_list|(
name|datanodeID
argument_list|,
name|reportType
argument_list|,
name|reports
argument_list|)
expr_stmt|;
name|ContainerInfo
name|updatedContainer
init|=
name|mapping
operator|.
name|getContainer
argument_list|(
name|containerName
argument_list|)
decl_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
literal|500000000L
argument_list|,
name|updatedContainer
operator|.
name|getNumberOfKeys
argument_list|()
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
literal|5368705120L
argument_list|,
name|updatedContainer
operator|.
name|getUsedBytes
argument_list|()
argument_list|)
expr_stmt|;
name|NavigableSet
argument_list|<
name|ContainerID
argument_list|>
name|pendingCloseContainers
init|=
name|mapping
operator|.
name|getStateManager
argument_list|()
operator|.
name|getMatchingContainerIDs
argument_list|(
name|containerOwner
argument_list|,
name|xceiverClientManager
operator|.
name|getType
argument_list|()
argument_list|,
name|xceiverClientManager
operator|.
name|getFactor
argument_list|()
argument_list|,
name|OzoneProtos
operator|.
name|LifeCycleState
operator|.
name|CLOSING
argument_list|)
decl_stmt|;
name|Assert
operator|.
name|assertTrue
argument_list|(
name|pendingCloseContainers
operator|.
name|contains
argument_list|(
name|updatedContainer
operator|.
name|containerID
argument_list|()
argument_list|)
argument_list|)
expr_stmt|;
block|}
annotation|@
name|Test
DECL|method|testCloseContainer ()
specifier|public
name|void
name|testCloseContainer
parameter_list|()
throws|throws
name|IOException
block|{
name|String
name|containerName
init|=
name|UUID
operator|.
name|randomUUID
argument_list|()
operator|.
name|toString
argument_list|()
decl_stmt|;
name|ContainerInfo
name|info
init|=
name|createContainer
argument_list|(
name|containerName
argument_list|)
decl_stmt|;
name|mapping
operator|.
name|updateContainerState
argument_list|(
name|containerName
argument_list|,
name|OzoneProtos
operator|.
name|LifeCycleEvent
operator|.
name|FINALIZE
argument_list|)
expr_stmt|;
name|NavigableSet
argument_list|<
name|ContainerID
argument_list|>
name|pendingCloseContainers
init|=
name|mapping
operator|.
name|getStateManager
argument_list|()
operator|.
name|getMatchingContainerIDs
argument_list|(
name|containerOwner
argument_list|,
name|xceiverClientManager
operator|.
name|getType
argument_list|()
argument_list|,
name|xceiverClientManager
operator|.
name|getFactor
argument_list|()
argument_list|,
name|OzoneProtos
operator|.
name|LifeCycleState
operator|.
name|CLOSING
argument_list|)
decl_stmt|;
name|Assert
operator|.
name|assertTrue
argument_list|(
name|pendingCloseContainers
operator|.
name|contains
argument_list|(
name|info
operator|.
name|containerID
argument_list|()
argument_list|)
argument_list|)
expr_stmt|;
name|mapping
operator|.
name|updateContainerState
argument_list|(
name|containerName
argument_list|,
name|OzoneProtos
operator|.
name|LifeCycleEvent
operator|.
name|CLOSE
argument_list|)
expr_stmt|;
name|NavigableSet
argument_list|<
name|ContainerID
argument_list|>
name|closeContainers
init|=
name|mapping
operator|.
name|getStateManager
argument_list|()
operator|.
name|getMatchingContainerIDs
argument_list|(
name|containerOwner
argument_list|,
name|xceiverClientManager
operator|.
name|getType
argument_list|()
argument_list|,
name|xceiverClientManager
operator|.
name|getFactor
argument_list|()
argument_list|,
name|OzoneProtos
operator|.
name|LifeCycleState
operator|.
name|CLOSED
argument_list|)
decl_stmt|;
name|Assert
operator|.
name|assertTrue
argument_list|(
name|closeContainers
operator|.
name|contains
argument_list|(
name|info
operator|.
name|containerID
argument_list|()
argument_list|)
argument_list|)
expr_stmt|;
block|}
comment|/**    * Creates a container with the given name in ContainerMapping.    * @param containerName    *          Name of the container    * @throws IOException    */
DECL|method|createContainer (String containerName)
specifier|private
name|ContainerInfo
name|createContainer
parameter_list|(
name|String
name|containerName
parameter_list|)
throws|throws
name|IOException
block|{
name|nodeManager
operator|.
name|setChillmode
argument_list|(
literal|false
argument_list|)
expr_stmt|;
name|ContainerInfo
name|containerInfo
init|=
name|mapping
operator|.
name|allocateContainer
argument_list|(
name|xceiverClientManager
operator|.
name|getType
argument_list|()
argument_list|,
name|xceiverClientManager
operator|.
name|getFactor
argument_list|()
argument_list|,
name|containerName
argument_list|,
name|containerOwner
argument_list|)
decl_stmt|;
name|mapping
operator|.
name|updateContainerState
argument_list|(
name|containerInfo
operator|.
name|getContainerName
argument_list|()
argument_list|,
name|OzoneProtos
operator|.
name|LifeCycleEvent
operator|.
name|CREATE
argument_list|)
expr_stmt|;
name|mapping
operator|.
name|updateContainerState
argument_list|(
name|containerInfo
operator|.
name|getContainerName
argument_list|()
argument_list|,
name|OzoneProtos
operator|.
name|LifeCycleEvent
operator|.
name|CREATED
argument_list|)
expr_stmt|;
return|return
name|containerInfo
return|;
block|}
block|}
end_class

end_unit

